--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    position: relative;
 }
 
 body > div {
@@ -54,4 +55,70 @@ button {
     width: 150px;
     background-color: var(--foreground-dark);
     margin-top: 50px;
+}
+
+.addBookModal {
+    display: flex;
+    position: absolute;
+    width: 300px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--foreground-dark);
+    border-radius: 20px;
+}
+
+form {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+form > * {
+    margin-bottom: 35px;
+}
+
+.inputField {
+    width: 90%;
+    height: 50px;
+}
+
+input[type="text"], input[type="number"] {
+    border-radius: 5px;
+    outline: none;
+    background-color: var(--background-dark);
+    border: 0;
+    padding-left: 10px;
+}
+
+input::placeholder {
+    font-size: 1.1rem;
+}
+
+form > div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+}
+
+#readItlabel {
+    display: inline-block;
+    font-size: 1.2rem;
+}
+
+input[type="checkbox"] {
+    margin-left: 10px;
+}
+
+form > button {
+    height: 50px;
+    width: 90%;
+    background-color: green;
+    font-size: 1.1rem;
+    text-align: center;
+    margin-bottom: 15px;
 }
