--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,17 @@ button {
     margin-top: 50px;
 }
 
+.modalBackground {
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: transparent;
+    pointer-events: none;
+}
+
 .addBookModal {
+    visibility: hidden;
     display: flex;
     position: absolute;
     width: 400px;
@@ -66,6 +76,10 @@ button {
     transform: translate(-50%, -50%);
     background-color: var(--foreground-dark);
     border-radius: 20px;
+}
+
+.showModal {
+    visibility: visible;
 }
 
 form {
