--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ button {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.5);
     pointer-events: none;
 }
 
@@ -115,13 +115,25 @@ button {
     width: 400px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.5);
     background-color: var(--foreground);
     border-radius: 20px;
+
 }
 
-.showModal {
+.addBookModal.showModal {
     visibility: visible;
+    transform: translate(-50%, -50%) scale(1);
+    transition: 0.2s ease-in-out;
+}
+
+@keyframes pop {
+    from {
+        transform: scale(0.5);
+    }
+    to {
+        transform: scale(1);
+    }
 }
 
 form {
@@ -236,4 +248,6 @@ input:focus:valid + div {
 input:focus:invalid + div {
     background-color: red;
 }
+
+/* Modal Popup Animation */
 
